Fix compilation issues from rebasing main